# password_manager

./: .gitignore  CMakeLists.txt  README.md  configure.ps1  password_manager.sln
cmake/modules/: FindCryptoPP.cmake
include/: operations.h
password_manager/: password_manager.cpp  password_manager.vcxproj
src/: CMakeLists.txt
src/password_database/: CMakeLists.txt  helpers.hpp  operations.cpp
src/password_manager/: CMakeLists.txt  main.cpp
